@@ -618,3 +618,4 @@
         ツールバーリソースをサポート。
     v.5.7.3 (2022.XX.YY)
         小さな性能の改良。
+        「複数の言語へ複製」を改良。
