@@ -275,3 +275,4 @@
     - Supported TOOLBAR resources.
 - v.5.7.3 (2022.XX.YY)
     - Minor performance improvements.
+    - Improved "Copy to multiple languages".
